@@ -1,3 +1,10 @@
+2002-03-26  wakaba <w@suika.fam.cx>
+
+	* Entity.pm: Adds User-Agent: value when stringify.
+	(ua_field_name, ua_use_config): New options.
+	(add_ua): New option.
+	(_add_ua): New proceder.
+
 2002-03-25  wakaba <w@suika.fam.cx>
 
 	* MIME/: New directory.
